add class for unzip sig file